movavi.com (archived on 2014-02-14)
{
  "alexa_rank": 17114,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 4313,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.84,
  "homepage_snapshot_redirected_domain": "movavi.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140403055059id_/http://www.movavi.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140403055059id_/http%3A//movavi.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "movavi.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140214011620id_/http%3A//www.movavi.com/privacy.html",
  "policy_title": "Privacy Policy",
  "policy_url": "movavi.com/privacy.html",
  "sha1": "d3317f3646501bca537eef6b0a26081d3b1bc9a3",
  "simhash": 4563536898104431748,
  "simhash_updated": false,
  "site_hostname": "movavi.com",
  "site_url": "http://movavi.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140214011620",
  "word_count": 693,
  "year": 2014
}

--- a/m/mo/mov/movavi.com.html
+++ b/m/mo/mov/movavi.com.html
@@ -1,21 +1,16 @@
-<!--The following is the downloaded HTML source of the movavi.com privacy policy that was archived on 2013-08-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130808171808id_/http%3A//www.movavi.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the movavi.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214011620id_/http%3A//www.movavi.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="language" content="en">
 	<link rel="icon" type="image/png" href="http://img.movavi.com/movavi.com/images/favicon.png">
 
-		<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="http://img.movavi.com/movavi.com.12/assets/jquery.js"></script>
-	<script type="text/javascript" src="http://img.movavi.com/movavi.com.12/assets/main.js"></script>
-	<script type="text/javascript">var language="en",localization="en"</script>
-	<link rel="stylesheet" type="text/css" href="http://img.movavi.com/movavi.com.12/assets/main.css">
-<script type="text/javascript">
-/*<![CDATA[*/
-var cookieSync={"www.movavi.com":"www.movavi.com","www.movavi.pl":"www.movavi.pl","www.movavi.co.uk":"www.movavi.co.uk","www.movavi.de":"www.movavi.de","www.movavi.ru":"www.movavi.ru"}
-/*]]>*/
-</script>
+		<link rel="stylesheet" type="text/css" href="http://img.movavi.com/movavi.com.12/assets/main.css">
 <title>Privacy Policy</title>
+	<script type="text/javascript" async="" src="https://chatserver5.comm100.com/livechat.ashx?siteId=27345"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="http://img.movavi.com/movavi.com.12/assets/jquery.js"></script>
+	<script type="text/javascript">var language="en",localization="en"</script>
+		<script type="text/javascript" src="http://st.movavi.com/main.js"></script>
 	<script type="text/javascript">
     var _gaq = _gaq || [];
 var pluginUrl = 
@@ -56,7 +51,7 @@ _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
 })(document, window, "yandex_metrika_callbacks");
 </script></head>
 
-<body class="en" itemscope="" itemtype="http://schema.org/Product"><script type="text/javascript" src="/assets/temp/linkevents.js"></script>
+<body class="en" itemscope="" itemtype="http://schema.org/Product"><script type="text/javascript" src="http://st.movavi.com/temp/linkevents.v4.js"></script>
 
 <div id="menu">
 	<div class="container">
@@ -68,7 +63,7 @@ _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
 <div class="drop"><a href="/store.html#windows">For Windows</a>
 <div class="two">
 	<div>
-                <a style="color:#FFFF00; font-weight:bold" href="/sale/">Summer Sale</a>
+                <a style="color:#FFFF00; font-weight:bold" href="/sale/">Winter Sale</a>
 		<a href="/suite/"><b>new</b>Video Suite</a>
 		<a href="/videoconverter/"><b>new</b>Video Converter</a>
 		<a href="/videoeditor/"><b>new</b>Video Editor</a>
@@ -78,7 +73,7 @@ _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
 		<a href="/splitmovie/">SplitMovie</a>
 		<a href="/chiliburner/">ChiliBurner</a>
 		<a href="/swf-to-video-converter/">SWF to Video Converter</a>     
-                <a href="/powerpoint-to-video-converter/">PowerPoint to Video Converter</a>           
+                <a href="/powerpoint-to-video-converter/">PowerPoint to Video Converter</a>   
 	</div>
 	<div>                
 		<a href="/videoconverter3d/">Video Converter 3D</a>
@@ -91,17 +86,18 @@ _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
                 <a href="/webstudio/">WebStudio Elements</a>
 		<hr>
 		<a href="/store.html#win">All Windows products</a>
-                <a href="/support/help-me-to-choose.html">Compare products</a>
+<a href="/support/help-me-to-choose.html">Compare products</a>
 	</div>
 	
 </div></div>
 <div class="drop"><a href="/store.html#mac">For Mac</a>
 <div>
-	<a href="/videoconvertermac/">Video Converter</a>
-<a href="/audioconvertermac/"><b>new</b>Audio Converter</a>
+	<a href="/videoconvertermac/"><b>new</b>Video Converter</a>
+        <a href="/audioconvertermac/"><b>new</b>Audio Converter</a>
 	<a href="/dvdrippermac/">DVD Ripper</a>
-        <a href="/mac-screen-capture/"><b>new</b>Screen Capture</a>
+        <a href="/mac-screen-capture/">Screen Capture</a>
         <a href="/media-player-mac/"><b>new</b>Media Player</a>
+        <a href="/splitmoviemac/"><b>new</b>Split Movie</a>
 	<hr>
 	<a href="/store.html#mac">All Mac products</a>
 </div></div>
@@ -129,11 +125,10 @@ _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
 	<hr>
 	<a href="/support.html#sales">FAQ</a>
 	<a href="/support/how-to/">How-tos</a>
-	<a href="/video-guides/">Video guides</a>
 	<a href="/support/manuals.html">Manuals</a>
 	<hr>
 	<a href="/support/contact.html">Contact support</a>
-	<a href="#livechat">Live chat</a>
+	<a href="#livechat" id="comm100-button-menu">Live chat</a>
 	<a href="/support/">Support Center</a>
 </div></div>
 <div class="drop"><a href="/about/">Company</a>
@@ -151,15 +146,16 @@ _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
 					<a href="http://www.movavi.com/es/privacy.html" class="es"><i></i>Español</a>
 					<a href="http://www.movavi.com/pt/privacy.html" class="pt"><i></i>Português</a>
 					<a href="http://www.movavi.com/nl/privacy.html" class="nl"><i></i>Nederlands</a>
-					<a href="http://www.movavi.com/cz/privacy.html" class="cs"><i></i>Czech</a>
-					<a href="http://www.movavi.com/dk/privacy.html" class="da"><i></i>Danish</a>
-					<a href="http://www.movavi.com/no/privacy.html" class="no"><i></i>Norwegian</a>
-					<a href="http://www.movavi.com/se/privacy.html" class="sv"><i></i>Swedish</a>
-					<a href="http://www.movavi.com/tr/privacy.html" class="tr"><i></i>Turkish</a>
+					<a href="http://www.movavi.com/cz/privacy.html" class="cs"><i></i>Čeština</a>
+					<a href="http://www.movavi.com/dk/privacy.html" class="da"><i></i>Dansk</a>
+					<a href="http://www.movavi.com/no/privacy.html" class="no"><i></i>Norsk</a>
+					<a href="http://www.movavi.com/se/privacy.html" class="sv"><i></i>Svenska</a>
+					<a href="http://www.movavi.com/tr/privacy.html" class="tr"><i></i>Türkçe</a>
 					<a href="http://www.movavi.com/jp/privacy.html" class="ja"><i></i>日本語</a>
 					<a href="http://www.movavi.pl/privacy.html" class="pl"><i></i>Polski</a>
 					<a href="http://www.movavi.com/br/privacy.html" class="br"><i></i>Brasil</a>
 					<a href="http://www.movavi.com/ar/privacy.html" class="ar"><i></i>عربي</a>
+					<a href="http://www.movavi.com/fi/privacy.html" class="fi"><i></i>Suomi</a>
 					<a href="http://www.movavi.com/privacy.html" class="en"><i></i>English</a>
 					<a href="http://www.movavi.de/privacy.html" class="de"><i></i>Deutsch</a>
 					<a href="http://www.movavi.ru/privacy.html" class="ru"><i></i>Русский</a>
@@ -231,11 +227,12 @@ Credit card information in encrypted during the ordering process and is deleted 
 <a href="/videoconvertermac/">Video Converter</a>
 <a href="/dvdrippermac/">DVD Ripper</a>
 <a href="/mac-screen-capture/">Screen Capture</a>
-<a href="/media-player-mac/">Media Player</a></div>
+<a href="/media-player-mac/">Media Player</a>
+<a href="/splitmoviemac/">Split Movie</a></div>
 <div><strong>Help:</strong>
 <a href="/support/">Support center</a>
 <a href="/support/contact.html">Contact support</a>
-<a href="#livechat">Live chat</a>
+<a href="#livechat" id="comm100-button-footer">Live chat</a>
 <a href="/support/lostkey.html">Retrieve key</a>
 <a href="/support/help-me-to-choose.html">How to choose your program?</a>
 <a href="/support/technicalfaq.html">Technical questions</a>
@@ -243,7 +240,6 @@ Credit card information in encrypted during the ordering process and is deleted 
 
 <strong>Learning:</strong>
 <a href="/support/how-to.html">How-tos</a>
-<a href="/video-guides/">Video guides</a>
 <a href="/codec/">About Video Codecs</a>
 <a href="/formats/">About Video and Audio Formats</a>
 <a href="/videoeditor/filters.html">Video Filters and Effects</a></div>
@@ -265,13 +261,14 @@ Credit card information in encrypted during the ordering process and is deleted 
 	<a class="social-net" href="/facebook" target="blank"></a>
 	<a class="social-net" href="/twitter" target="blank"></a>
 	<a class="social-net" href="/youtube" target="blank"></a>
+        <a class="social-net g-p" href="/plus.google" target="blank"></a>
 	<form id="subscribe" action="">
 		<label for="email-subscribe">Subscribe for news and special offers</label>
 		<input type="text" name="email" id="email-subscribe">
 		<button type="submit">Subscribe</button>
 	</form>
 	<div style="margin-left:10px;" class="g-plus-badge"><div class="g-plus" data-width="113" data-href="https://plus.google.com/110575363012583281912" data-rel="publisher"></div></div>
-	<a style="color:#FFFF00;font-weight:bold" href="/sale/">Summer Sale</a>
+	<a style="color:#FFFF00;font-weight:bold" href="/sale/">Winter Sale</a>
 <a href="/products.html">Store</a>
 <a href="/sitemap.html">Site map</a>
 <a href="/privacy.html">Privacy Policy</a>
@@ -279,22 +276,50 @@ Credit card information in encrypted during the ordering process and is deleted 
 <a href="/eula.html">EULA</a></div>
 <div class="clear"></div>
 <hr>
-<p>Copyright © 2013, Movavi. All right reserved. <br>
+<p>Copyright © 2014, Movavi. All rights reserved.<br>
 Use of this website signifies your agreement to the <a href="/tos.html">Terms of Use</a> and <a href="/privacy.html">Online Privacy Policy</a></p>
 
-<script type="text/javascript">init();</script>
 <script type="text/javascript">
+  window.___gcfg = {lang: 'en-GB'};
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
     po.src = 'https://apis.google.com/js/plusone.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
+</div></div>
+
+<script type="text/javascript">init();</script>
 <script type="text/javascript">var switchTo5x=false;</script>
 <script type="text/javascript" src="http://img.movavi.com/movavi.com.12/assets/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "311848a9-3ab7-4efe-b576-1073202a3a74"}); </script>
-<script type="text/javascript">$(document).on('click','a[href="#livechat"]',function(e){comm100_27345.openChatWindow(e.originalEvent,1190,-1);return false})</script>
-<script src="https://chatserver.comm100.com/js/LiveChat.js?siteId=27345&amp;planId=1190&amp;partnerId=-1" type="text/javascript"></script>
-</div></div><div style="float:left;margin:-9999px">Page loaded...</div>
+<script type="text/javascript">
+var comm100loc=comm100loc||((document.documentElement.lang=='es')?{codeplan:1226,linkplan:1227}:{})
+var Comm100API = Comm100API || new Object;
+Comm100API.chat_buttons = Comm100API.chat_buttons || [];
+var comm100_chatButton = new Object;
+comm100_chatButton.code_plan = comm100loc.codeplan||1190;
+comm100_chatButton.div_id = 'comm100-button';
+Comm100API.chat_buttons.push(comm100_chatButton);
+Comm100API.site_id = 27345;
+Comm100API.main_code_plan = comm100loc.codeplan||1190;
+var comm100_lc = document.createElement('script');
+comm100_lc.type = 'text/javascript';
+comm100_lc.async = true;
+comm100_lc.src = 'https://chatserver5.comm100.com/livechat.ashx?siteId=' + Comm100API.site_id;
+var comm100_s = document.getElementsByTagName('script')[0];
+comm100_s.parentNode.insertBefore(comm100_lc, comm100_s);
+</script>
+<script type="text/javascript">
+var comm100loc=comm100loc||{};
+(function(){if(Comm100API&&comm100_chatButton){
+	var p=comm100loc.linkplan||comm100_chatButton.code_plan;
+	Comm100API.chat_buttons.push({code_plan:p});
+	var f=function(i){var e=document.getElementById(i);if(e)e.onclick=function(){Comm100API.open_chat_window(this.event,p)}}
+	f('comm100-button-menu');
+	f('comm100-button-footer');
+}})();
+</script>
+<div style="float:left;margin:-9999px">Page loaded...</div>
 
 </body></html>
