--- a/w/wr/wri/writerspenarticledirectory.com.html
+++ b/w/wr/wri/writerspenarticledirectory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the writerspenarticledirectory.com privacy policy that was archived on 2013-05-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130501232415id_/http%3A//www.writerspenarticledirectory.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the writerspenarticledirectory.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214012153id_/http%3A//www.writerspenarticledirectory.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -72,7 +72,7 @@ location.href = mail_str;
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.marketingarticlelibrary.com/adserver/adjs.php?n=745428110&amp;what=zone:9&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://www.marketingarticlelibrary.com/adserver/adclick.php?n=a60cde47' target='blank'><img src='http://www.marketingarticlelibrary.com/adserver/adview.php?what=zone:9&amp;n=a60cde47' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.marketingarticlelibrary.com/adserver/adjs.php?n=042230043&amp;what=zone:9&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://www.marketingarticlelibrary.com/adserver/adclick.php?n=a60cde47' target='blank'><img src='http://www.marketingarticlelibrary.com/adserver/adview.php?what=zone:9&amp;n=a60cde47' border='0' alt=''></a></noscript>
 
 </center>
 		 </td>
@@ -81,9 +81,10 @@ location.href = mail_str;
     <td class="maincontentcell" valign="top" colspan="2"> <!-- Starting of Main Content -->
 <form name="search" method="post" action="http://www.writerspenarticledirectory.com/indexser.php">
 <div class="topnav">
-<a href="http://www.jazib.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
-<a href="http://drknee.blogspot.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
-<a href="http://diabetescorner.blogspot.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Search:
 <input type="text" name="search" value="" size="31" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #6a5432">
 <input type="submit" value="Go"></div></form>
@@ -244,8 +245,8 @@ function googleTranslateElementInit() {
 <a href="http://www.articlemarketingnetwork.com/" target="blank">
 
 <img src="http://www.marketingarticlelibrary.com/images/memberbutton.jpg" width="103" height="104" alt="Article Marketing Network Member" border="0"></a>
-
-<br></center>
+<br><hr><center><br><a href="" target="new"><img src=""></a>
+<br></center><hr>
 
 
 <div class="spacer"></div>
@@ -263,74 +264,27 @@ function googleTranslateElementInit() {
 <img src="http://www.writerspenarticledirectory.com/images/dot.gif" width="10" height="10" alt="dot.gif - 1kb" border="0"><a href="http://www.writerspenarticledirectory.com/terms.php">Terms of Service</a><br>
 </div><br><br>
 
-<hr><center><script type="text/javascript"><!--
+<hr><center>
 
-google_ad_client = "pub-6961775427827433";
-
-/* 160x600, created 4/1/10 */
-
-google_ad_slot = "1732537968";
-
-google_ad_width = 160;
-
-google_ad_height = 600;
-
-//-->
-
-</script>
-
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-
-</script>
 
 </center><hr>
 
-<center>
-<a href="http://go2-url.com/auzrr" target="blank">
-<img src="http://www.writerspenarticledirectory.com/images/7dayEbook_1-lg-cvr.gif" width="176" height="256" alt="PUBLISH YOUR OWN E-BOOK IN 7-DAYS OR LESS" border="0"></a>
-<br><br></center>
+
 
 <div class="rightnavbox">
-<a href="http://www.jazib.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
-<a href="http://drknee.blogspot.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
-<a href="http://diabetescorner.blogspot.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
+<hr><br><a href="http://www.amazon.com/George-Wallace/e/B00AGH8OBY" target="new"><c><b>CLICK HERE NOW...</b></c><br>to <i><b>George Wallace's Amazon Author Page</b></i>. Discover over 30+ thrillers available as ebooks, print, and audio books.</a><br><hr><hr>
 
-HOW TO WRITE A GREAT CHILDREN'S BOOK!<br>
-<a href="http://go2-url.com/auzri" target="blank">CLICK HERE NOW...</a>
+<br><center><a href="http://www.amazon.com/George-Wallace/e/B00AGH8OBY" target="new"><img src="http://www.marketingarticlelibrary.com/fileave/ban-GW-160x549-Sci-FiThrillers.jpg"></a></center><br><hr>
+
+
 </div><br><br>
 
-<center>
-<a href="http://go2-url.com/auzru" target="blank">
-<img src="http://www.writerspenarticledirectory.com/images/TurnWordsIntoTraffic-lg-cvr.jpg" width="178" height="256" alt="TURN YOUR WORDS INTO TRAFFIC..." border="0"></a>
-<br><br>
-
-<a href="http://www.ohgodisthatyou.com" target="blank">
-<img src="http://www.writerspenarticledirectory.com/images/georgewallace-cover-ohgod.jpg" width="167" height="250" alt="MOST CONTROVERSIAL BOOK ON RELIGION IN THE PAST CENTURY..." border="0"></a>
-<br><br>
-<script type="text/javascript"><!--
-google_ad_client = "pub-5719041778713054";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_type = "text";
-google_ad_channel ="";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_url = "0000FF";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script><br>
-<a href="http://www.jazib.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
-<a href="http://drknee.blogspot.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
-<a href="http://diabetescorner.blogspot.com"><img src="http://www.jazib.com/5by3.gif" border="0"></a><br>
-
-</center>
 
 
 
-    </td>
+
+
+    </center></td>
   </tr>
 </tbody></table>
 
@@ -346,9 +300,12 @@ google_color_text = "000000";
 
 
 
-© 2006-2010<span style="text-decoration: none"> George &amp; Marilyn Wallace </span>
+© 2006-2014<span style="text-decoration: none"> Authors George &amp; Marilyn Wallace </span>
 All rights protected.&nbsp; <br>
 Visit our companion site: <a href="http://www.retirementlivingarticledirectory.com/" target="blank">Retirement Living Article Directory</a><br>
+
+
+<hr><br><a href="http://www.amazon.com/George-Wallace/e/B00AGH8OBY" target="new"><img src="http://www.marketingarticlelibrary.com/fileave/AmazonLogo-small-horiz.jpg"><br></a><center><a href="http://www.amazon.com/George-Wallace/e/B00AGH8OBY" target="new"><b><font size="2">CLICK HERE NOW...</font></b><br>to visit <br><i><b><font size="3">George Wallace's Amazon Author Page</font></b></i><font size="3">. <br>Discover over 30+ thrillers available as ebooks, print, and audio books.</font></a><br><hr><hr>
 
 Use of our free service is protected by our <a href="http://www.writerspenarticledirectory.com/privacy.php">
 
@@ -358,9 +315,9 @@ Use of our free service is protected by our <a href="http://www.writerspenarticl
 
 <span style="text-decoration: none">Terms of Service</span></a><br>
 
-</div>
+</center></div>
 
-<br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
 
 
 
