--- a/r/ro/rod/rodanandfields.com.html
+++ b/r/ro/rod/rodanandfields.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rodanandfields.com privacy policy that was archived on 2013-09-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130918154347id_/https%3A//www.rodanandfields.com/Pages/Company/About/More/Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rodanandfields.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214013148id_/https%3A//www.rodanandfields.com/Pages/Company/About/More/Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js no-flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="description">
 <!-- Mobile viewport optimized: h5bp.com/viewport -->
@@ -263,7 +263,7 @@
     <!-- Footer -->
     <div id="FooterPane">
         <!--<div id="TickerTape">
-                <img id="ctl00_TempTicker" src="../../../../Content/Images/temptick.gif" border="0" />
+                <img id="ctl00_TempTicker" src="../../../../Content/Images/temptick.gif" style="border-width:0px;" />
             </div>-->
         <div class="FooterContent">
             <div class="Right">
@@ -279,7 +279,7 @@
              
                 <div class="DSAlogo">
                     <a href="http://www.dsa.org/">
-                        <img id="ctl00_uxDSALogo" src="../../../../Content/Images/dsamemberlogo_sm02.gif" alt="DSA Member" border="0"></a> <a href="http://www.dsa.org/ethics/" id="uxDSACodeOfEthics" target="_blank">DSA Code of Ethics</a>
+                        <img id="ctl00_uxDSALogo" src="../../../../Content/Images/dsamemberlogo_sm02.gif" alt="DSA Member" style="border-width:0px;"></a> <a href="http://www.dsa.org/ethics/" id="uxDSACodeOfEthics" target="_blank">DSA Code of Ethics</a>
                 </div>
                 
             </div>
