--- a/f/fx/fxs/fxservice.com.html
+++ b/f/fx/fxs/fxservice.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fxservice.com privacy policy that was archived on 2013-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131230150810id_/http%3A//www.fxservice.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fxservice.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214015631id_/http%3A//www.fxservice.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -156,7 +156,7 @@ $("form[action*='tr.admiralmarkets.com']").attr("onSubmit","_gaq.push(['_linkByP
  <input type="text" maxlength="128" name="search_block_form" id="edit-search-block-form-1" size="15" value="Search..." onblur="if (this.value == '') {this.value = 'Search...';}" onfocus="if (this.value == 'Search...') {this.value = '';}" class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Search" class="form-submit">
-<input type="hidden" name="form_build_id" id="form-9c75bd9093cc724aa1fdd9db9d0604ad" value="form-9c75bd9093cc724aa1fdd9db9d0604ad">
+<input type="hidden" name="form_build_id" id="form-686f3e96f382cccb64a380bbecac4f2b" value="form-686f3e96f382cccb64a380bbecac4f2b">
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form">
 </div>
 
@@ -179,7 +179,7 @@ $("form[action*='tr.admiralmarkets.com']").attr("onSubmit","_gaq.push(['_linkByP
 
 
   <div class="content clear-block">
-    <p>This privacy policy sets out how Admiral Markets Ltd (“AM”) uses and protects any information that you give to AM when you use this website.</p>
+    <p>This privacy policy sets out how Admiral Markets (ProServiceCom Ltd, next “AM”) uses and protects any information that you give to AM when you use this website.</p>
 <p>AM is committed to ensuring that your privacy is protected. Should AM ask you to provide certain information by which you can be identified when using this website, then you can be assured that it will only be used in accordance with this privacy statement.</p>
 <p>AM may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. This policy is effective from 21/02/12.</p>
 <h2>What AM collects</h2>
@@ -257,12 +257,12 @@ $("form[action*='tr.admiralmarkets.com']").attr("onSubmit","_gaq.push(['_linkByP
 								
 <p style="color: #494949; font-family: Arial; font-size: 15px; margin-top: 0;"><b>Upcoming webinars</b></p>		
 <div class="webinars_widget_wrap">
-			<span class="webinars_widget_topic"><a href="https://www3.gotomeeting.com/register/419939614" target="_blank" onclick="_gaq.push(['_trackEvent', 'Webinars', 'ClickSignup', 'Weekly FX Recap:  EUR/USD GBP/USD AUD/USD']);">Weekly FX Recap:  EUR/USD GBP/USD AUD/USD</a></span>
-		<span class="webinars_widget_datetime">30.12.2013 - 05:00 PM GMT</span>
-		<span class="webinars_widget_topic"><a href="https://www3.gotomeeting.com/register/186146062" target="_blank" onclick="_gaq.push(['_trackEvent', 'Webinars', 'ClickSignup', 'Live Trading Lab Candle Stick Trading']);">Live Trading Lab Candle Stick Trading</a></span>
-		<span class="webinars_widget_datetime">31.12.2013 - 07:45 AM GMT</span>
-		<span class="webinars_widget_topic"><a href="https://www3.gotomeeting.com/register/262575950" target="_blank" onclick="_gaq.push(['_trackEvent', 'Webinars', 'ClickSignup', 'Pro Learning Lab 2014 Expected']);">Pro Learning Lab 2014 Expected</a></span>
-		<span class="webinars_widget_datetime">02.01.2014 - 05:00 PM GMT</span>
+			<span class="webinars_widget_topic"><a href="https://www3.gotomeeting.com/register/313944510" target="_blank" onclick="_gaq.push(['_trackEvent', 'Webinars', 'SidebarClick', 'Pro Learning Lab: Monthly Targets &amp; System Expectancy']);">Pro Learning Lab: Monthly Targets &amp; System Expectancy</a></span>
+		<span class="webinars_widget_datetime">13.02.2014 - 05:00 PM GMT&nbsp;</span>
+		<span class="webinars_widget_topic"><a href="https://www3.gotomeeting.com/register/935577382" target="_blank" onclick="_gaq.push(['_trackEvent', 'Webinars', 'SidebarClick', 'Weekly FX Recap: EUR/USD, GBP/USD, and AUD/USD']);">Weekly FX Recap: EUR/USD, GBP/USD, and AUD/USD</a></span>
+		<span class="webinars_widget_datetime">17.02.2014 - 05:00 PM GMT&nbsp;</span>
+		<span class="webinars_widget_topic"><a href="https://www3.gotomeeting.com/register/687167598" target="_blank" onclick="_gaq.push(['_trackEvent', 'Webinars', 'SidebarClick', 'Live Trading Lab: Range Trading ']);">Live Trading Lab: Range Trading </a></span>
+		<span class="webinars_widget_datetime">18.02.2014 - 07:45 AM GMT&nbsp;</span>
 </div>
                         </div>
 						<div class="am_sidebar_line"></div>                    	<div class="am_sidebar_item">
@@ -486,7 +486,7 @@ $("#am_lang_list_bg ul li").hover(
  <input type="password" name="pass" id="edit-pass" maxlength="128" size="15" tabindex="2" class="form-text required">
 </div>
 <input type="hidden" name="form_id" id="edit-user-login" value="user_login">
-<input type="hidden" name="form_build_id" id="form-5170227be36225168a1066d8701c2bbf" value="form-5170227be36225168a1066d8701c2bbf">
+<input type="hidden" name="form_build_id" id="form-e69ab52efbe39690002ccadb612f4e83" value="form-e69ab52efbe39690002ccadb612f4e83">
 <input type="submit" name="op" id="edit-submit-2" value="Log in" tabindex="3" class="form-submit">
 </div></form><div class="item-list"><ul><li class="first last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li>
 </ul></div></div><div id="fancy_login_ajax_loader"><img src="http://www.fxservice.com/modules/fancy_login/images/ajax-loader.gif" alt="Loading"></div></div><script type="text/javascript">
