--- a/h/ht/htm/htmlcodetutorial.com.html
+++ b/h/ht/htm/htmlcodetutorial.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the htmlcodetutorial.com privacy policy that was archived on 2013-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130820165339id_/http%3A//www.htmlcodetutorial.com/acustom/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the htmlcodetutorial.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214020021id_/http%3A//www.htmlcodetutorial.com/acustom/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -21,24 +21,23 @@
   </table>
   
 
-
   <!--MAIN MENU-->
-  <form action="http://www.htmlcodetutorial.com/search.html" id="cse-search-box">
-  <table class="mainmenu" border="0" cellspacing="0" cellpadding="0">
+  <table class="mainmenu" style="margin-left:auto; margin-right:auto;" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr>
       <td align="left" valign="top" width="8"><img alt="" border="0" src="/graphics/menuleft.gif" width="8" height="41" style="position:absolute;"></td>
       <td align="center" valign="middle" nowrap="nowrap" style="background-image: url('/graphics/menubg.gif')">
+        <form action="http://www.htmlcodetutorial.com/search.html">
         <table border="0" cellspacing="0" cellpadding="0">
          <tbody><tr>
            <td nowrap="nowrap">
 
 <div class="menu">
+<ul>
 
 <!--~~~~~~~~~~~~~~~~~~~~~~-->
 <!--   HOME               -->
 <!--~~~~~~~~~~~~~~~~~~~~~~-->
 
-<ul>
 <li><a class="toplevel" href="/" title="HTML Code Tutorial">HOME</a></li>
 
 
@@ -49,7 +48,6 @@
 <li><a class="toplevel" href="/" title="HTML Tutorial">TUTORIAL <span class="nabla">∇</span><!--[if IE 7]><!--></a><!--<![endif]-->
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 	<ul>
-
 
 	<li><a class="drop" href="/applets/applets.html" title="APPLET">Applets</a></li>
 	<li><a class="drop" href="/ignore.html" title="Comment">Comments</a></li>
@@ -108,8 +106,9 @@
 <!--~~~~~~~~~~~~~~~~~~~~~~-->
 
 <li><a class="toplevel" href="/character_famsupp_193.html">CSS</a></li>
-</ul>
 
+
+</ul>
 </div>
 
             </td>
@@ -127,6 +126,7 @@
             </td>
           </tr>
         </tbody></table>
+        </form>
       </td>
       <td align="right" valign="top" width="8"><img alt="" border="0" style="vertical-align:top;" src="/graphics/menuright.gif" width="8" height="41"></td>
     </tr>
@@ -134,9 +134,7 @@
       <td colspan="3" bgcolor="#CED3D5" nowrap="nowrap"><img alt="" border="0" src="/graphics/trans.gif" width="5" height="5"></td>
     </tr>
   </tbody></table>
-  </form>
   <!--END MAIN MENU-->
-
 
 
 <!--HEADER-->
@@ -146,27 +144,8 @@
         <table width="100%" cellspacing="0" cellpadding="0">
           <tbody><tr valign="top">
             <td align="left" width="212"><a href="/" target="_top"><img src="/graphics/logo.med.guide.gif" alt="Learn HTML Code Tutorial Reference Guide" border="0" align="left"></a></td>
-            <td align="center">
-
-<script type="text/javascript"><!--
-google_ad_client = "pub-6155056320102818";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_type = "text_image";
-//2007-03-16: HCT Leaderboard
-google_ad_channel = "3633318054";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "016bbd";
-google_color_text = "000000";
-google_color_url = "000000";
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-
-</td>
+            <td align="center"><script id="mNCC" language="javascript">  medianet_width='728';  medianet_height= '90';  medianet_crid='492804815';  </script>
+  <script id="mNSC" src="http://contextual.media.net/nmedianet.js?cid=8CU6973PB" language="javascript"></script> </td>
           </tr>
           <tr>
             <td colspan="2"><img alt="" src="/graphics/trans.gif" width="5" height="5"></td>
@@ -178,7 +157,7 @@ google_color_url = "000000";
 
   <table border="0" cellspacing="0" cellpadding="0" class="main">
     <tbody><tr>
-      <td valign="top">
+      <td style="vertical-align:top; width:775px;">
 
 <!--END HEADER-->
 
@@ -224,69 +203,35 @@ document.write("<A HREF='mailto:"+username+""+at+""+domainname+"'>"+username+""+
 
 
 
+
+<!--FOOTER-->
+
       </td>
       <td bgcolor="#ced3d5" width="5">&nbsp;</td>
-      <td valign="top" width="160">
-
+      <td style="vertical-align:top; width:160px;">
 
 
 <table class="sideadtable">
-  <!--tr>
-    <td class="sideadheader">DARFUR</td>
-  </tr>
-  <tr>
-    <td class="sideadlinks">Get a <a rel="nofollow" href="http://store.savedarfur.org/signs-and-posters/sdc-big-poster.html">Stop the Genocide</a> poster at <a rel="nofollow" href="http://www.savedarfur.org/">SaveDarfur.org</a>.<br />
-      Also see <a rel="nofollow" href="http://www.eyesondarfur.org/">Eyes on Darfur</a>.
-    </td>
-  </tr-->
   <tbody><tr>
-    <td class="sideadheader">HOSTING / DESIGN</td>
-  </tr>
-  <tr>
-    <td class="sideadlinks"><a rel="nofollow" href="http://www.cheap-domainregistration.com/">$1.99
-      Domain Registration</a><br>
-      <a rel="nofollow" href="http://www.domain-website-hosting.com/">Cheap Web Hosting</a><br>
-      <a rel="nofollow" href="http://www.websitetemplates.com">Website Templates</a><br>
-	  <a rel="nofollow" href="http://www.scribbo.com/">Get Scribbo wiki for your site</a>
+    <td class="sideadlinks" style="text-align:left">
+      <a rel="nofollow" href="http://www.cheap-domainregistration.com/">$1.99 Domain Registration</a><br><br>
+      <a rel="nofollow" href="http://www.domain-website-hosting.com/">Cheap Web Hosting</a><br><br>
+      <a rel="nofollow" href="http://www.websitetemplates.com">Website Templates</a><br><br>
+	  <a rel="nofollow" href="http://www.scribbo.com/">Get Scribbo wiki for your site</a><br>
+<br>
     </td>
   </tr>
-  <!-- tr>
-    <td class="sideadheader">MAKE MONEY</td>
-  </tr>
-  <tr>
-    <td class="sideadlinks"><a rel="nofollow" href="http://www.hotreseller.com">Sell
-      Domain Names</a><br />
-      <a rel="nofollow" href="http://www.mywebsitestorage.com">Sell Website Templates</a></td>
-  </tr -->
 </tbody></table>
 
         <div align="center">
-
-<script type="text/javascript"><!--
-google_ad_client = "pub-6155056320102818";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_type = "text_image";
-//2007-02-06: HCT Skyscraper
-google_ad_channel = "1959700629";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "016bbd";
-google_color_text = "000000";
-google_color_url = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-
+<script id="mNCC" language="javascript">  medianet_width='160';  medianet_height= '600';  medianet_crid='312727561';  </script>  
+<script id="mNSC" src="http://contextual.media.net/nmedianet.js?cid=8CU6973PB" language="javascript"></script> 
         </div>
-
 
 
       </td>
     </tr>
 
-    <!--FOOTER-->
     <tr>
       <td colspan="3">
         <table border="0" width="100%" cellspacing="0" cellpadding="0">
@@ -304,13 +249,15 @@ google_color_url = "000000";
 			<a class="footer" href="/acustom/privacy.html"><span class="footer">Privacy Policy</span></a> &nbsp; | &nbsp;
 			<a class="footer" href="/acustom/"><span class="footer">About</span></a>
 			<br>
-			<a href="/acustom/" class="footer"><span class="copyright">Copyright ©1997-2002 Idocs and ©2002-2011 HTML Code Tutorial</span></a>
+			<a href="/acustom/" class="footer"><span class="copyright">Copyright ©1997-2002 Idocs and ©2002-2014 HTML Code Tutorial</span></a>
             </td>
           </tr>
         </tbody></table>
       </td>
     </tr>
-    <!--END FOOTER-->
+
+<!--END FOOTER-->
+
     <!--HARDCODE BOTTOM-->
   </tbody></table>
 </div>
