--- a/r/re/rea/realhitz4u.com.html
+++ b/r/re/rea/realhitz4u.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realhitz4u.com privacy policy that was archived on 2013-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131127063513id_/http%3A//www.realhitz4u.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realhitz4u.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214020730id_/http%3A//www.realhitz4u.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Language" content="en-gb">
@@ -82,11 +82,11 @@
 <br>
         <center>
 		<a href="http://www.seansupplee.com" target="blank"><img src="http://www.realhitz4u.com/images/seansuppleeside.png" border="0"></a>
-<!--   <p>Verified members: total_verified</p> -->
-<!--   <p>Total members: 32121<p>
-   <p>Surfed today: 398<p>
-   <p>Surfed yesterday: 44899<p>
-   <p>Online today: 12<p>
+<!--   <p>Verified members: </p> -->
+<!--   <p>Total members: <p>
+   <p>Surfed today: <p>
+   <p>Surfed yesterday: <p>
+   <p>Online today: <p>
 -->
 
 	  <a href="http://traffichoopla.com/r.cgi/87418" target="_blank">
