--- a/m/ma/mar/marriagesherpa.com.html
+++ b/m/ma/mar/marriagesherpa.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marriagesherpa.com privacy policy that was archived on 2013-08-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130817092654id_/http%3A//www.marriagesherpa.com/legal/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marriagesherpa.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214022202id_/http%3A//www.marriagesherpa.com/legal/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" type="text/javascript" async=""></script><script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
@@ -73,6 +73,8 @@ var WRInitTime=(new Date()).getTime();
 </ul>
 <div id="main">
 <h2>Privacy Policy</h2>
+
+<iframe src="http://privacy-policy.truste.com/verified-policy/www.marriagesherpa.com" title="Privacy Policy by TRUSTe" width="100%" height="800" border="0"></iframe>
 
 <p>Last Updated: April 9, 2010</p>
 
