--- a/v/vd/vdo/vdog.tv.html
+++ b/v/vd/vdo/vdog.tv.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vdog.tv privacy policy that was archived on 2013-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131213183818id_/http%3A//www.vdog.tv/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vdog.tv privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214025845id_/http%3A//vdog.tv/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru" lang="ru"><head>
 	<title>Privacy Policy</title>
