--- a/m/mo/mon/monsterauto.ca.html
+++ b/m/mo/mon/monsterauto.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the monsterauto.ca privacy policy that was archived on 2013-08-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130813175748id_/http%3A//www.monsterauto.ca/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the monsterauto.ca privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214033536id_/http%3A//www.monsterauto.ca/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -304,7 +304,7 @@ var sc_security="250b8d2f";
 						<td height="0"></td>
 					</tr>
 					<tr>
-						<td colspan="2" align="right" class="newtext"><strong>Tuesday, August 13, 2013</strong>&nbsp;&nbsp;</td>
+						<td colspan="2" align="right" class="newtext"><strong>Thursday, February 13, 2014</strong>&nbsp;&nbsp;</td>
 					</tr>
 				</tbody></table>
 			</td>
@@ -583,12 +583,12 @@ google_color_link = "FFFFFF";
 				</td>
 				</tr>
 				</tbody></table>
-				<table width="700" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="padding-top:10px;">	
+				<table width="700" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="padding:10px 0px 0px 0px;">	
 				  <tbody><tr>
 					<td align="center" class="style13">
-						<span style="padding-left:0px; padding-top:7px">
+						<span style="padding-left:0px; padding-top:7px; padding-bottom:5px;">
 							Monster Auto, Find a Car or Sell Your Vehicle on Canada's Best New and Used Car Classified Website<br>
-							Copyright © 2005-2013 MonsterAuto Inc.  All rights reserved.
+							Copyright © 2005-2014 MonsterAuto Inc.  All rights reserved.
 						</span>
 					</td>
 				  </tr>
