--- a/e/eb/ebo/ebooksdownloadfree.com.html
+++ b/e/eb/ebo/ebooksdownloadfree.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ebooksdownloadfree.com privacy policy that was archived on 2013-09-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130911124941id_/http%3A//www.ebooksdownloadfree.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ebooksdownloadfree.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214055244id_/http%3A//www.ebooksdownloadfree.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<link rel="stylesheet" href="images/style.css" type="text/css">
@@ -87,11 +87,7 @@ var sc_partition=58;
 var sc_click_stat=1; 
 var sc_security="e2e3d8bb"; 
 </script>
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><div
-class="statcounter"><a title="customizable counter"
-href="http://www.statcounter.com/free_hit_counter.html"
-target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/4007400/0/e2e3d8bb/1/"
-alt="customizable counter" ></a></div></noscript>
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
+
 <p>Note: The ebooks files are stored somewhere else on the internet and Books are NOT a part of this website our users just collect links.</p>
 </div></div></body></html>
