brctv.com (archived on 2014-02-14)
{
  "alexa_rank": 356354,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 16634,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.36,
  "homepage_snapshot_redirected_domain": "brctv.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140404190820id_/http://www.brctv.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140404190820id_/http%3A//brctv.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "brctv.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140214061532id_/http%3A//www.brctv.com/privacy-policy",
  "policy_title": "Privacy Policy | Blue Ridge Communications",
  "policy_url": "brctv.com/privacy-policy",
  "sha1": "f139160a96f76af49dee4efe6e4ad7a8af0fd170",
  "simhash": 12830592623390197251,
  "simhash_updated": false,
  "site_hostname": "brctv.com",
  "site_url": "http://brctv.com",
  "smog": 13.82,
  "strict_updated": true,
  "timestamp": "20140214061532",
  "word_count": 2622,
  "year": 2014
}

--- a/b/br/brc/brctv.com.html
+++ b/b/br/brc/brctv.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brctv.com privacy policy that was archived on 2013-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131215213533id_/http%3A//www.brctv.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brctv.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214061532id_/http%3A//www.brctv.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -13,20 +13,20 @@
         <script type="text/javascript" src="/sites/all/modules/pngbehave/iepngfix_tilebg.js"></script>
     <![endif]-->
 <link rel="shortcut icon" href="/sites/all/themes/brctv/favicon.ico" type="image/x-icon">
-<meta http-equiv="X-UA-Compatible" content="IE=8"><meta name="viewport" content="width:1024">  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_179184aa7411f79b908561fb09be8a53.css">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_8345e8c33a85162cf0229537a72bce88.css">
+<meta http-equiv="X-UA-Compatible" content="IE=8"><meta name="viewport" content="width:1024">  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_9a030aebc97efba4e18c5c66a1427058.css">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_a005fdb9757b8d911db3ba629c75324e.css">
 
 
 <!--[if IE]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/brctv/css/ie.css?v" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/brctv/css/ie.css?9" />
 <![endif]-->
 <!--[if IE 7]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/brctv/css/ie7.css?v" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/brctv/css/ie7.css?9" />
 <![endif]-->
 <!--[if IE 6]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/brctv/css/ie6.css?v" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/brctv/css/ie6.css?9" />
 <![endif]-->
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/default/files/js/js_6855933738193fb0f55a4aec9be721c8.js"></script>
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/default/files/js/js_60a3b44fac4d76def6168651488c0b05.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutbound": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "nice_menus_options": { "delay": "800", "speed": "slow" }, "thickbox": { "close": "Close", "next": "Next \x3e", "prev": "\x3c Prev", "esc_key": "or Esc Key", "next_close": "Next / Close on last", "image_count": "Image !current of !total" }, "beautytips": { "bt_whatyouget_view": { "area": ".view-what-you-get li .views-field-title .field-content a, .content-area p .fck-tooltip a", "trigger": [ "hover" ], "width": 250, "list": [ "trigger", "width" ] } }, "beautytips_defaults": { "fill": "#F7F7F7", "padding": 8, "strokeStyle": "#B7B7B7", "cornerRadius": 0, "cssStyles": { "fontFamily": "\"lucida grande\",tahoma,verdana,arial,sans-serif", "fontSize": "11px" }, "list": [ "fill", "padding", "strokeStyle", "cornerRadius", "cssStyles" ], "css_list": [ "fontFamily", "fontSize" ] } });
@@ -48,7 +48,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
   <!--[if IE]>
   <script type="text/javascript" src="/sites/all/themes/brctv/scripts/excanvas.js"></script>
   <![endif]-->
-<link href="https://web.archive.org/web/20131215222235/http://widgets.twimg.com/j/2/widget.css" rel="stylesheet" type="text/css"><style type="text/css">#twtr-widget-1 .twtr-avatar, #twtr-widget-1 .twtr-user { display: none; } #twtr-widget-1 .twtr-tweet-text { margin-left: 0; }</style><style type="text/css">#twtr-widget-1 i { display: block; }</style></head>
+<link href="https://web.archive.org/web/20110911042924/http://widgets.twimg.com/j/2/widget.css" rel="stylesheet" type="text/css"><style type="text/css">#twtr-widget-1 .twtr-avatar, #twtr-widget-1 .twtr-user { display: none; } #twtr-widget-1 .twtr-tweet-text { margin-left: 0; }</style><style type="text/css">#twtr-widget-1 i { display: block; }</style><style type="text/css">#twtr-widget-1 .twtr-doc,                      #twtr-widget-1 .twtr-hd a,                      #twtr-widget-1 h3,                      #twtr-widget-1 h4 {            background: transparent !important;            color: #333 !important;          }          #twtr-widget-1 .twtr-tweet a {            color: #333 !important;          }          #twtr-widget-1 .twtr-bd, #twtr-widget-1 .twtr-timeline i a,           #twtr-widget-1 .twtr-bd p {            color: #333 !important;          }          #twtr-widget-1 .twtr-new-results,           #twtr-widget-1 .twtr-results-inner,           #twtr-widget-1 .twtr-timeline {            background: transparent !important;          }</style><script type="text/javascript" src="https://web.archive.org/web/20110911042924/http://twitter.com/statuses/user_timeline.json?screen_name=BlueRidgeTV&amp;callback=TWTR.Widget.receiveCallback_1&amp;count=1&amp;clientsource=TWITTERINC_WIDGET"></script></head>
 <body class="page not-front not-logged-in node-type-page two-sidebars page-privacy-policy section-privacy-policy">
 <div id="page"><div id="page-inner">
 
@@ -96,7 +96,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
  <input type="text" maxlength="128" name="search_block_form" id="edit-search-block-form-1" size="15" value="Search this Site" class="form-text NormalTextBox txtSearch" onfocus="if (this.value == 'Search this Site') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search this Site';}">
 </div>
 <input type="image" name="op" value="Search" id="edit-submit" class="form-submit" src="/sites/all/themes/brctv/images/search-web.png">
-<input type="hidden" name="form_build_id" id="form-AiPes0-iffmEd3XnIcztZU61Z0Ilv5QXcuOlk3WRr90" value="form-AiPes0-iffmEd3XnIcztZU61Z0Ilv5QXcuOlk3WRr90">
+<input type="hidden" name="form_build_id" id="form-8jcWWPV8ft1hn2ln3CLLfydIbGB5AaNTK5PDtVhvCWk" value="form-8jcWWPV8ft1hn2ln3CLLfydIbGB5AaNTK5PDtVhvCWk">
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form">
 </div>
 
@@ -386,7 +386,7 @@ Hours Sat: 9am-1pm" class="fck-tooltip">Wellsboro Office</a>&nbsp;</p></div>
 	</div>
 	<script src="/sites/all/scripts/twitter.js"></script>
 	<script>new TWTR.Widget({ version: 2, type: 'profile',rpp: 1, interval: 6000, width: 180, height: 200, theme: { shell: {
-background: 'transparent', color: '#333' }, tweets: { background: 'transparent', color: '#333', links: '#333' }}, features: { scrollbar: false, loop: false, live: false, hashtags: true, timestamp: true, avatars: false, behavior: 'all' }}).render().setUser('BlueRidgeTV').start();</script><div class="twtr-widget" id="twtr-widget-1"></div>
+background: 'transparent', color: '#333' }, tweets: { background: 'transparent', color: '#333', links: '#333' }}, features: { scrollbar: false, loop: false, live: false, hashtags: true, timestamp: true, avatars: false, behavior: 'all' }}).render().setUser('BlueRidgeTV').start();</script><div class="twtr-widget twtr-widget-profile" id="twtr-widget-1"><div class="twtr-doc" style="width: 180px;">            <div class="twtr-hd"><a target="_blank" href="https://web.archive.org/web/20110911042924/http://twitter.com/" class="twtr-profile-img-anchor"><img alt="profile" class="twtr-profile-img" src="https://web.archive.org/web/20110911042924/http://widgets.twimg.com/j/1/default.gif"></a>                      <h3></h3>                      <h4></h4>               <div class="twtr-spinner"></div>            </div>            <div class="twtr-bd">              <div class="twtr-timeline" style="height: auto;">                <div class="twtr-tweets">                  <div class="twtr-reference-tweet"></div>                  <!-- tweets show here -->                </div>              </div>            </div>            <div class="twtr-ft">              <div><a target="_blank" href="https://web.archive.org/web/20110911042924/http://twitter.com"><img alt="" src="https://web.archive.org/web/20110911042924/http://widgets.twimg.com/j/1/twitter_logo_s.png" height="15"></a>                <span><a target="_blank" class="twtr-join-conv" style="color:#333" href="https://web.archive.org/web/20110911042924/http://twitter.com/BlueRidgeTV">Join the conversation</a></span>              </div>            </div>          </div></div>
 </div>
 
     </div>
@@ -528,7 +528,7 @@ background: 'transparent', color: '#333' }, tweets: { background: 'transparent',
 
   <div class="content">
     <span id="toggle"><span style="padding-left:10px;">Site Map</span> <img src="/sites/all/themes/brctv/images/sitemapani-2.gif" style="margin-bottom:-5px;"></span><span id="copyright"><h4><span>Call</span> 800-CABLE 77</h4>
-© 2013 Blue Ridge Communications</span>
+© 2014 Blue Ridge Communications</span>
 <br>  </div>
 </div></div> <!-- /block-inner, /block -->
 </div><!-- /.region -->
@@ -547,7 +547,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", "UA-21433345-1"]);_gaq.push(["_t
   <div id="block-views-site_map-block_1" class="block block-views first last region-odd even region-count-1 count-12 "><div class="block-inner">
 
   <div class="content">
-    <div class="view view-site-map view-id-site_map view-display-id-block_1 view-dom-id-12">
+    <div class="view view-site-map view-id-site_map view-display-id-block_1 view-dom-id-1">
         <div class="view-header">
       <p id="toggleclose" style="cursor: hand; cursor:pointer;"> <span style="padding-left:24px;">&nbsp;</span></p>
 <p></p>
@@ -834,5 +834,5 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", "UA-21433345-1"]);_gaq.push(["_t
 <script type="text/javascript" src="/sites/all/themes/brctv/scripts/node_bt.js"></script>
 
 
-<!-- Page cached by Boost @ 2013-12-15 11:52:44, expires @ 2013-12-16 11:52:44 -->
+<!-- Page cached by Boost @ 2014-02-13 00:04:47, expires @ 2014-02-14 00:04:47 -->
 </body></html>
