jabil.com (archived on 2014-02-14)
{
  "alexa_rank": 259669,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 32002,
  "classifier_probability": 0.78,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 18.71,
  "homepage_snapshot_redirected_domain": "jabil.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140306014351id_/http://www.jabil.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140306014351id_/http%3A//jabil.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "jabil.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140214103133id_/http%3A//www.jabil.com/privacy.html",
  "policy_title": "Terms of Use - Jabil",
  "policy_url": "jabil.com/privacy.html",
  "sha1": "4eb05b7238fd13699ee996078e2ae53f75f0ae0e",
  "simhash": 10024529612226344813,
  "simhash_updated": false,
  "site_hostname": "jabil.com",
  "site_url": "http://jabil.com",
  "smog": 19.39,
  "strict_updated": true,
  "timestamp": "20140214103133",
  "word_count": 5058,
  "year": 2014
}

--- a/j/ja/jab/jabil.com.html
+++ b/j/ja/jab/jabil.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jabil.com privacy policy that was archived on 2013-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220041446id_/http%3A//www.jabil.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jabil.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214103133id_/http%3A//www.jabil.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
         <!-- Begin imware.tracker -->
@@ -9,12 +9,12 @@ var bb=new Image();var _ti=910;var _q="";var na=(navigator.appName=="Netscape");
 function setonclicks(a,b){var i=0;var retval=true;while(document.links[i]!=a){i++;}if(b.li[i])retval=b.li[i].oldonclick();bye(a);return retval;}
 function newonld(){if(hasonload)oldonld();lnks=new Object();var sze=document.links.length;lnks.li=new Array(sze);for (var i=0; i<sze; i++){if(document.links[i].onclick){lnks.li[i]=document.links[i];lnks.li[i].oldonclick=document.links[i].onclick;}eval("document.links[i].onclick=function(){return setonclicks(this,lnks);}");}}function bye(a){if(a.href.toLowerCase().indexOf('http')!=0)return true;if(getdomain(location)==getdomain(a))return true;if(a.href.toLowerCase().indexOf('http')!=0)return true;var _qc="http://s.clickability.com/s?19=912";_qc+="&6=189154971";_qc+="&7=1255596";_qc+="&18="+encodeURIComponent(Math.random());_qc+="&100="+a.href;_qc+="&101="+encodeURIComponent(a.text);var cc=new Image();if(na){cc.src=_qc;pc(100);}else cc.src=_qc;return true;}function pc(a){d = new Date(); while (1){m =new Date(); df = m-d;if( df > a ) {break;}}}function getdomain(a){var i=a.host.indexOf(":");return (i>=0)?a.host.substring(0,i):a.host;}if(self['setupalready']){var dosetup = false;alert('There are two $imware.tracker calls on this page. Please alert Client Services');}else{var dosetup = true;var hasonload=false;}if(dosetup && ((window.screen)||((new Array()).toSource)||((new Array()).shift&&ns))&&(navigator.userAgent.indexOf('Mac')<0)){if(window.onload){oldonld=window.onload;hasonload=true;}window.onload=newonld;var setupalready = true;}//-->
 </script><noscript>
-<img width="1" height="1" src="http://s.clickability.com/s?19=990&14=0&6=189154971&7=1255596&25=0&18=0.7260410805679829">
+<img width="1" height="1" src="http://s.clickability.com/s?19=990&14=0&6=189154971&7=1255596&25=0&18=0.13616288283321298">
 </noscript>
 
 <!-- End imware.tracker -->  
 
-  <!-- fuck this shit -->
+  
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
         
 	<title>Terms of Use - Jabil</title>
@@ -277,10 +277,10 @@ function newonld(){if(hasonload)oldonld();lnks=new Object();var sze=document.lin
 																											        							                                    <li>
                                         <div>
                                             <h1>
-                                            	                                                <a href="http://www.jabil.com/diversified_manufacturing/materials_technology" class="diversified_navimg-materialstech">Materials Technology</a>
+                                            	                                                <a href="http://www.jabil.com/diversified_manufacturing/materials_technology" class="diversified_navimg-materialstech">Green Point</a>
                                             </h1>
                                             <div>
-                                                <a href="http://www.jabil.com/diversified_manufacturing/materials_technology" style="font-size: 11px;">Materials Technology</a>
+                                                <a href="http://www.jabil.com/diversified_manufacturing/materials_technology" style="font-size: 11px;">Green Point</a>
                                             </div>
                                             <!--p>Vertically integrated design, automation and mass production solutions</p-->
                                             <!--p style="padding-top:15px;" class="navmorelink"-->
@@ -357,12 +357,12 @@ function newonld(){if(hasonload)oldonld();lnks=new Object();var sze=document.lin
                                         <!--p>Optimizing demand-driven production environments with proprietary tools and processes</p-->
                                     </li>
 			        			        			                                            <li>
-                                        <div><a href="http://www.jabil.com/services/supply_chain_logistics">Supply Chain &amp; Logistics</a></div>
-                                        <!--p>Creating value via innovative solutions, advanced planning and proprietary cost analytics</p-->
+                                        <div><a href="http://www.jabil.com/services/materials_technology">Green Point</a></div>
+                                        <!--p>Vertically integrated design, automation and mass production solutions</p-->
                                     </li>
 			        			        			                                            <li>
-                                        <div><a href="http://www.jabil.com/services/materials_technology">Materials Technology</a></div>
-                                        <!--p>Vertically integrated design, automation and mass production solutions</p-->
+                                        <div><a href="http://www.jabil.com/services/supply_chain_logistics">Supply Chain &amp; Logistics</a></div>
+                                        <!--p>Creating value via innovative solutions, advanced planning and proprietary cost analytics</p-->
                                     </li>
 			        			                                        </ul>
                             </div>
@@ -445,12 +445,12 @@ function newonld(){if(hasonload)oldonld();lnks=new Object();var sze=document.lin
                                         <!--p>Optimizing demand-driven production environments with proprietary tools and processes</p-->
                                     </li>
 			        			        			                                            <li>
-                                        <div><a href="http://www.jabil.com/services/supply_chain_logistics">Supply Chain &amp; Logistics</a></div>
-                                        <!--p>Creating value via innovative solutions, advanced planning and proprietary cost analytics</p-->
+                                        <div><a href="http://www.jabil.com/services/materials_technology">Green Point</a></div>
+                                        <!--p>Vertically integrated design, automation and mass production solutions</p-->
                                     </li>
 			        			        			                                            <li>
-                                        <div><a href="http://www.jabil.com/services/materials_technology">Materials Technology</a></div>
-                                        <!--p>Vertically integrated design, automation and mass production solutions</p-->
+                                        <div><a href="http://www.jabil.com/services/supply_chain_logistics">Supply Chain &amp; Logistics</a></div>
+                                        <!--p>Creating value via innovative solutions, advanced planning and proprietary cost analytics</p-->
                                     </li>
 			        			                                        </ul>
                             </div>
@@ -579,12 +579,12 @@ function newonld(){if(hasonload)oldonld();lnks=new Object();var sze=document.lin
                                         <!--p>Optimizing demand-driven production environments with proprietary tools and processes</p-->
                                     </li>
 			        			        			                                            <li>
-                                        <div><a href="http://www.jabil.com/services/supply_chain_logistics">Supply Chain &amp; Logistics</a></div>
-                                        <!--p>Creating value via innovative solutions, advanced planning and proprietary cost analytics</p-->
+                                        <div><a href="http://www.jabil.com/services/materials_technology">Green Point</a></div>
+                                        <!--p>Vertically integrated design, automation and mass production solutions</p-->
                                     </li>
 			        			        			                                            <li>
-                                        <div><a href="http://www.jabil.com/services/materials_technology">Materials Technology</a></div>
-                                        <!--p>Vertically integrated design, automation and mass production solutions</p-->
+                                        <div><a href="http://www.jabil.com/services/supply_chain_logistics">Supply Chain &amp; Logistics</a></div>
+                                        <!--p>Creating value via innovative solutions, advanced planning and proprietary cost analytics</p-->
                                     </li>
 			        			                                        </ul>
                             </div>
