freemyapps.com (archived on 2014-02-14)
{
  "alexa_rank": 143992,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 10008,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.64,
  "homepage_snapshot_redirected_domain": "freemyapps.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140406084926id_/http://welcome.freemyapps.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140407182907id_/http%3A//freemyapps.com",
  "interval": "2014_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "freemyapps.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140214145154id_/http%3A//welcome.freemyapps.com/privacy.html",
  "policy_title": "Free My Apps",
  "policy_url": "welcome.freemyapps.com/privacy.html",
  "sha1": "9041ed7730fe3a8d7159f330912d1da80ee2dff7",
  "simhash": 10997628013428644799,
  "simhash_updated": false,
  "site_hostname": "freemyapps.com",
  "site_url": "http://freemyapps.com",
  "smog": 16.53,
  "strict_updated": false,
  "timestamp": "20140214145154",
  "word_count": 1607,
  "year": 2014
}

--- a/f/fr/fre/freemyapps.com.html
+++ b/f/fr/fre/freemyapps.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freemyapps.com privacy policy that was archived on 2013-09-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130926055350id_/http%3A//www.freemyapps.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freemyapps.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214145154id_/http%3A//welcome.freemyapps.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -61,6 +61,7 @@
                 <li><a target="_blank" href="http://pinterest.com/freemyapps/"><img alt="" src="images/social-pinterest.png"></a></li>
                 <li><a target="_blank" href="http://www.youtube.com/user/FreeMyAppsTube"><img alt="" src="images/social-youtube.png"></a></li>
                  <li><a target="_blank" href="https://plus.google.com/114652398546178805175/posts"><img alt="" src="images/social-googleplus.png"></a></li>
+                 <li><a target="_blank" href="http://instagram.com/officialfreemyapps"><img alt="" src="images/social-instagram.png"></a></li>
                 
           </ul>
         </div><!--header-->
